// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MainContent > MainContent Tool Output Height Logic > 'ASB mode - Focused shell should expand' 1`] = `
"ScrollableList
AppHeader(full)

╭──────────────────────────────────────────────────────────────────────────────────────────────╮
│ ⠋  Shell Command Running a long command...                                                   │
│                                                                                              │
│ Line 11                                                                                      │
│ Line 12                                                                                      │
│ Line 13                                                                                      │
│ Line 14                                                                                      │
│ Line 15                                                                                      │
│ Line 16                                                                                    █ │
│ Line 17                                                                                    █ │
│ Line 18                                                                                    █ │
│ Line 19                                                                                    █ │
│ Line 20                                                                                    █ │
╰──────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`MainContent > MainContent Tool Output Height Logic > 'ASB mode - Unfocused shell' 1`] = `
"ScrollableList
AppHeader(full)

╭──────────────────────────────────────────────────────────────────────────────────────────────╮
│ ⠋  Shell Command Running a long command...                                                   │
│                                                                                              │
│ Line 11                                                                                      │
│ Line 12                                                                                      │
│ Line 13                                                                                      │
│ Line 14                                                                                      │
│ Line 15                                                                                      │
│ Line 16                                                                                    █ │
│ Line 17                                                                                    █ │
│ Line 18                                                                                    █ │
│ Line 19                                                                                    █ │
│ Line 20                                                                                    █ │
╰──────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`MainContent > MainContent Tool Output Height Logic > 'Normal mode - Constrained height' 1`] = `
"AppHeader(full)

╭──────────────────────────────────────────────────────────────────────────────────────────────╮
│ ⠋  Shell Command Running a long command...                                                   │
│                                                                                              │
│ ... first 11 lines hidden (Ctrl+O to show) ...                                               │
│ Line 12                                                                                      │
│ Line 13                                                                                      │
│ Line 14                                                                                      │
│ Line 15                                                                                      │
│ Line 16                                                                                      │
│ Line 17                                                                                      │
│ Line 18                                                                                      │
│ Line 19                                                                                      │
│ Line 20                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`MainContent > MainContent Tool Output Height Logic > 'Normal mode - Unconstrained height' 1`] = `
"AppHeader(full)

╭──────────────────────────────────────────────────────────────────────────────────────────────╮
│ ⠋  Shell Command Running a long command...                                                   │
│                                                                                              │
│ Line 1                                                                                       │
│ Line 2                                                                                       │
│ Line 3                                                                                       │
│ Line 4                                                                                       │
│ Line 5                                                                                       │
│ Line 6                                                                                       │
│ Line 7                                                                                       │
│ Line 8                                                                                       │
│ Line 9                                                                                       │
│ Line 10                                                                                      │
│ Line 11                                                                                      │
│ Line 12                                                                                      │
│ Line 13                                                                                      │
│ Line 14                                                                                      │
│ Line 15                                                                                      │
│ Line 16                                                                                      │
│ Line 17                                                                                      │
│ Line 18                                                                                      │
│ Line 19                                                                                      │
│ Line 20                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`MainContent > renders a ToolConfirmationQueue without an extra line when preceded by hidden tools 1`] = `
"AppHeader(full)
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
 > Apply plan                                                                   
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀

╭──────────────────────────────────────────────────────────────────────────────╮
│ Ready to start implementation?                                               │
│                                                                              │
│  Error reading plan: File not found: /path/to/plan                           │
╰──────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`MainContent > renders a split tool group without a gap between static and pending areas 1`] = `
"AppHeader(full)

╭──────────────────────────────────────────────────────────────────────────╮
│ ✓  test-tool A tool for testing                                          │
│                                                                          │
│ Part 1                                                                   │
│                                                                          │
│ ✓  test-tool A tool for testing                                          │
│                                                                          │
│ Part 2                                                                   │
╰──────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`MainContent > renders a spurious line when a tool group has only hidden tools and borderBottom true 1`] = `
"AppHeader(full)
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
 > Apply plan                                                                   
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
"
`;

exports[`MainContent > renders a subagent with a complete box including bottom border 1`] = `
"AppHeader(full)
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
 > Investigate                                                                  
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀

╭──────────────────────────────────────────────────────────────────────────╮
│ ≡ Running Agent... (ctrl+o to collapse)                                  │
│                                                                          │
│ Running subagent codebase_investigator...                                │
│                                                                          │
│ ⠋  run_shell_command echo hello                                          │
│                                                                          │
╰──────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`MainContent > renders mixed history items (user + gemini) with single line padding between them 1`] = `
"ScrollableList
AppHeader(full)
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
 > User message                                                                                     
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
✦ Gemini response
  Gemini response
  Gemini response
  Gemini response
  Gemini response
  Gemini response
  Gemini response
  Gemini response
  Gemini response
  Gemini response
"
`;

exports[`MainContent > renders multiple history items with single line padding between them 1`] = `
"ScrollableList
AppHeader(full)
✦ Gemini message 1
  Gemini message 1
  Gemini message 1
  Gemini message 1
  Gemini message 1
  Gemini message 1
  Gemini message 1
  Gemini message 1
  Gemini message 1
  Gemini message 1

✦ Gemini message 2
  Gemini message 2
  Gemini message 2
  Gemini message 2
  Gemini message 2
  Gemini message 2
  Gemini message 2
  Gemini message 2
  Gemini message 2
  Gemini message 2
"
`;

exports[`MainContent > renders multiple thinking messages sequentially correctly 1`] = `
"ScrollableList
AppHeader(full)
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
 > Plan a solution                                                                                  
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
 Thinking... 
 │
 │ Initial analysis
 │ This is a multiple line paragraph for the first thinking message of how the
 │ model analyzes the problem.
 │
 │ Planning execution
 │ This a second multiple line paragraph for the second thinking message
 │ explaining the plan in detail so that it wraps around the terminal display.
 │
 │ Refining approach
 │ And finally a third multiple line paragraph for the third thinking message to
 │ refine the solution.
"
`;

exports[`MainContent > renders multiple thinking messages sequentially correctly 2`] = `
"ScrollableList
AppHeader(full)
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
 > Plan a solution                                                                                  
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
 Thinking... 
 │
 │ Initial analysis
 │ This is a multiple line paragraph for the first thinking message of how the
 │ model analyzes the problem.
 │
 │ Planning execution
 │ This a second multiple line paragraph for the second thinking message
 │ explaining the plan in detail so that it wraps around the terminal display.
 │
 │ Refining approach
 │ And finally a third multiple line paragraph for the third thinking message to
 │ refine the solution."
`;
